# hatchling-namespace-demo

./: .gitignore  README.md
.github/workflows/: demo.yaml
base/: pyproject.toml
base/myproj/: __init__.py
task1/: pyproject.toml
task1/myproj/tasks/task1/: __init__.py
task2/: pyproject.toml
