[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "myproj"
requires-python = ">=3.7"
description = "Namespace test - base"
dynamic = ["version"]

[tool.hatch.version]
source = "vcs"
raw-options = { root = ".." }

[tool.hatch.build.hooks.vcs]
version-file = "myproj/_version.py"
