[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "myproj-task1"
requires-python = ">=3.7"
version = "1.0"
description = "Namespace tests - tasks"

[tool.hatch.version]
source = "vcs"
raw-options = { root = ".." }

[tool.hatch.build.hooks.vcs]
version-file = "myproj/tasks/task1/_version.py"
