[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "myproj-task1"
requires-python = ">=3.7"
description = "Namespace tests - tasks"
dynamic = ["version"]

[tool.hatch.version]
source = "vcs"
raw-options = { root = ".." }

[tool.hatch.build.hooks.vcs]
version-file = "myproj/tasks/task1/_version.py"
