[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "myproj-task2"
requires-python = ">=3.7"
description = "Namespace tests - tasks"
dynamic = ["version"]

[tool.hatch.version]
source = "vcs"
raw-options = { root = ".." }

[tool.hatch.build.hooks.vcs]
version-file = "myproj/tasks/task2/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["myproj"]
include-only = ["myproj/tasks/task2"]
